Camera Animation Breaks EEVEE Motion Blur (Two Steps or More) #79970

Closed
opened 2020-08-21 01:47:53 +02:00 by Timothy Cook · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Radeon Pro 580 ATI Technologies Inc. 4.5.13570 Core Profile Context FireGL 19.30.01.53 26.20.13001.53002

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-19 10:14, hash: 83c78529b9
Worked: First iteration of 2.9 with EEVEE Motion Blur (One Month Ago?)
Caused by 4f59e4bddc

Short description of error
Adding keyframed movement, dolly, pan, or tilt, to the active camera cancels EEVEE Motion Blur, when using more than 1 step. Seems to also degrade the image; edges become jagged.

Exact steps for others to reproduce the error

  1. Open included file, hit F12 Render. Notice the lack of motion blur.
  2. Look at the lower portion of the screen; "Action Editor" is active. Leave on frame 30 and "Unlink" camera action.
  3. F12 render a second time and observe working motion blur.

EEVEE Motion Blur Test.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Radeon Pro 580 ATI Technologies Inc. 4.5.13570 Core Profile Context FireGL 19.30.01.53 26.20.13001.53002 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-19 10:14, hash: `83c78529b9` Worked: First iteration of 2.9 with EEVEE Motion Blur (One Month Ago?) Caused by 4f59e4bddc **Short description of error** Adding keyframed movement, dolly, pan, or tilt, to the active camera cancels EEVEE Motion Blur, when using more than 1 step. Seems to also degrade the image; edges become jagged. **Exact steps for others to reproduce the error** 1. Open included file, hit F12 Render. Notice the lack of motion blur. 2. Look at the lower portion of the screen; "Action Editor" is active. Leave on frame 30 and "Unlink" camera action. 3. F12 render a second time and observe working motion blur. [EEVEE Motion Blur Test.blend](https://archive.blender.org/developer/F8798469/EEVEE_Motion_Blur_Test.blend)
Author

Added subscriber: @CookItOff

Added subscriber: @CookItOff

#79846 was marked as duplicate of this issue

#79846 was marked as duplicate of this issue

#79807 was marked as duplicate of this issue

#79807 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.
Bisecting now.

Can confirm. Bisecting now.
Member

Added subscriber: @Brando77

Added subscriber: @Brando77
Member

Caused by 4f59e4bddc

Caused by 4f59e4bddc
Member

Added subscriber: @fclem

Added subscriber: @fclem
Clément Foucault was assigned by Philipp Oeser 2020-08-21 11:33:20 +02:00

This issue was referenced by 35ef42d967

This issue was referenced by 35ef42d967c7c127dea8bcd6b8173e722f3a853c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @irfancelik, @mano-wii

Added subscribers: @irfancelik, @mano-wii
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79970
No description provided.